--- a/css/cssAdmin.css
+++ b/css/cssAdmin.css
@@ -1015,3 +1015,46 @@ a:focus {
 .sidebar-dark.toggled #sidebarToggle::after {
   color: rgba(255, 255, 255, 0.5);
 }
+
+input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+  width: 65%;
+}
+
+.search-container button {
+  display: inline-block;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: whitesmoke;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+  width: 5%;
+  height: auto;
+}
+
+.search-container button:hover {
+  background: #ccc;
+}
+
+#searchButton {
+  width: 26%;
+  height: auto;
+}
+
+.button4 {
+  display: inline-block;
+  background-color: white;
+  color: black;
+  border: 2px solid #e7e7e7;
+  width: 10%;
+  height: auto;
+}
+
+.button4 {border-radius: 12px;}
+
+.button4:hover {background-color: #e7e7e7;}
