replaced manage vaccine css

--- a/css/style.css
+++ b/css/style.css
@@ -175,3 +175,71 @@ a.article:hover {
         display: none;
     }
 }
+
+
+/* ---------------------------------------------------
+    MANAGE VACCINE
+----------------------------------------------------- */
+
+.selectpicker {
+    width: 150px;
+    height: 40px;
+}
+
+.addNewVaccineH3 {
+    color: black;
+}
+
+
+/* Modal Content/Box */
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 20% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    /* Could be more or less, depending on screen size */
+}
+
+
+/* The Close Button */
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#cancelBtn,
+#addBtn {
+    float: right;
+    margin-right: 1 rem;
+}
+
+.vaccineDescription {
+    height: 2in;
+    width: 5in;
+}
+
+.vaccineName,
+.vaccineManufacturer,
+.vaccineType,
+.vaccineEfficacy,
+.dosageRequired,
+.dosageInterval,
+.minimumTemperature,
+.maximumTemperature,
+.lifeSpan {
+    width: 5in;
+    height: auto;
+}
