--- a/css/cssAdmin.css
+++ b/css/cssAdmin.css
@@ -33,10 +33,11 @@ input[type=text] {
     float: right;
     background-color: ghostwhite;
     border: 2px solid black;
-    width: 10%;
+    width: auto;
     height: 40px;
     color: black!important;
     margin-right: 10px;
+    margin: 3px;
 }
 
 .button4 {
@@ -117,4 +118,38 @@ input[type=text] {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.button5 {
+    display: inline-block;
+    float: right;
+    background-color: ghostwhite;
+    border: 2px solid black;
+    width: auto;
+    height: 40px;
+    color: black!important;
+    margin-right: 10px;
+    margin: 3px;
+}
+
+.button5 {
+    border-radius: 12px;
+}
+
+.button5:hover {
+    background-color: #e7e7e7;
+}
+
+/* Create a two-column layout */
+.column {
+    float: left;
+    width: 50%;
+    padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
 }
