--- a/css/cssAdmin.css
+++ b/css/cssAdmin.css
@@ -33,11 +33,10 @@ input[type=text] {
     float: right;
     background-color: ghostwhite;
     border: 2px solid black;
-    width: auto;
+    width: 10%;
     height: 40px;
     color: black!important;
     margin-right: 10px;
-    margin: 3px;
 }
 
 .button4 {
@@ -120,37 +119,20 @@ input[type=text] {
     cursor: pointer;
 }
 
-.button5 {
+/* Modal Header */
+.modal-header{
+    padding: 10px;
+    color: #fafafa;
+    background-color: #04628A;
+}
+
+/*Text Inputs*/
+input[type=text],select{
+    width: 95%;
+    padding: 12px;
+    margin: 8px;
     display: inline-block;
-    float: right;
-    background-color: ghostwhite;
-    border: 2px solid black;
-    width: auto;
-    height: 40px;
-    color: black!important;
-    margin-right: 10px;
-    margin: 3px;
-}
-
-.button5 {
-    border-radius: 12px;
-}
-
-.button5:hover {
-    background-color: #e7e7e7;
-}
-
-/* Create a two-column layout */
-.column {
-    float: left;
-    width: 50%;
-    padding: 5px;
-}
-
-/* Clearfix (clear floats) */
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    box-sizing: border-box;
 }
