--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,77 @@ input[type=text1] {
     width: 80%!important;
 }
 
+/* Modal Header */
+.modal-header{
+    color: #fafafa;
+    background-color: #04628A;
+}
+
+/*Text Inputs*/
+input[type=text3],select{
+    width: 95%;
+    padding: 12px;
+    margin: 8px;
+    display: inline-block;
+    border: 2px solid #04628A;
+    border-radius: 8px;
+}
+
+input[type="text"]:disabled{
+    width: 50%;
+    padding: 12px;
+    margin: 8px;
+    border: 2px solid #04628A;
+    border-radius: 8px;
+}
+
+label1{
+    padding-left: 100px;
+}
+
+.modal{
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Black w/ opacity */
+}
+
+
+/* Modal Content/Box */
+.content-modal{
+    background-color: #fefefe;
+    margin: 5% auto;
+    /* 15% from the top and centered */
+    border: 1px solid #888;
+    width: 50%;
+    /*Could be more or less, depending on screen size */
+    border-radius: 12px;
+}
+
+/* Modal Footer */
+.modal-footer{
+    border: none;
+}
+
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+}
+
 .counterColumn{
     float: right;
     width: 20%;
