Debugged getEmployee.php, getPatientDetails.php, Manage ReporthHome.php, ManageVaccineHome.php, and style.css. Moved and debugged ManagePatientHome.php and ManagePersonnelHome.php

--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ input[type=text1] {
     height: auto;
 }
 
-#reviewReportBtn {
+.viewReportBtn {
     background: #DCF4FF;
     border: 1px solid black;
     width: 60%;
