minor update on managedep

--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,7 @@ input[type=text] {
 
 .content-modal{
     background-color: #fefefe;
+    border-radius: 12px;
     margin: 5% auto;
     /* 15% from the top and centered */
     border: 1px solid #888;
@@ -261,8 +262,15 @@ input[type=text] {
     /*Could be more or less, depending on screen size */
 }
 
-/* The Close Button */
 
+.AddHealthD-option{
+    border: 1.5px solid lightgray;
+    border-radius: 5px;
+    margin: 1%;
+    padding: 2%;
+}
+
+/* The Close Button */
 .close {
     color: #aaa;
     float: right;
@@ -301,7 +309,11 @@ input[type=text] {
     height: auto;
 }
 
-
+.AddHealthD-option > ul{
+    list-style-type: none;
+    column-count: 4;
+    column-gap: 2rem;
+}
 /* ---------------------------------------------------
     MANAGE REPORT
 ----------------------------------------------------- */
@@ -455,10 +467,7 @@ img{
     background-color: #04628A;
 }
 
-.modal-body{
-    overflow-y: auto;
-    height: 500px;
-}
+
 
 /* Modal Footer */
 .modal-footer{
@@ -495,4 +504,31 @@ input[type=text4]{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
+}
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+
+}
+
+.AddHealthD-option ul{
+    columns:2;
+    list-style-type: none;
 }
