--- a/css/patientStyle.css
+++ b/css/patientStyle.css
@@ -133,7 +133,7 @@
 }
 
 #dose22 {
-    margin-left: 0.7%;
+    margin-left: 0.3%;
 }
 
 #profPic {
@@ -258,6 +258,7 @@
 
 .secondrow {
     display: flex;
+    justify-content: center;
 }
 
 .counter-section i {
