--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ a:focus {
 #sidebar ul li a:visited {
     color: #fff !important;
     background: #04628A;
-    ;
+;
 }
 
 #sidebar ul li.active>a,
@@ -252,7 +252,7 @@ input[type=text] {
 
 /* Modal Content/Box */
 
-.content-modal {
+.content-modal{
     background-color: #fefefe;
     border-radius: 12px;
     margin: 5% auto;
@@ -262,16 +262,22 @@ input[type=text] {
     /*Could be more or less, depending on screen size */
 }
 
-.AddHealthD-option {
+
+.AddHealthD-option{
     border: 1.5px solid lightgray;
     border-radius: 5px;
     margin: 1%;
     padding: 2%;
 }
 
+#upload-content{
+    border: 1.5px solid lightgray;
+    border-radius: 5px;
+    margin: 15px 25px 0px 35px;
+    padding: 25px 25px 0px 25px;
+}
 
 /* The Close Button */
-
 .close {
     color: #aaa;
     float: right;
@@ -289,7 +295,7 @@ input[type=text] {
 #cancelBtn,
 #addBtn {
     float: right;
-    margin-right: 1 rem;
+    margin-right: 1rem;
 }
 
 .vaccineDescription {
@@ -310,13 +316,11 @@ input[type=text] {
     height: auto;
 }
 
-.AddHealthD-option>ul {
+.AddHealthD-option > ul{
     list-style-type: none;
     column-count: 4;
     column-gap: 2rem;
 }
-
-
 /* ---------------------------------------------------
     MANAGE REPORT
 ----------------------------------------------------- */
@@ -388,19 +392,14 @@ input[type=text1] {
     width: 80%!important;
 }
 
-
 /* Modal Header */
-
-.modal-header {
+.modal-header{
     color: #fafafa;
     background-color: #04628A;
 }
 
-
 /*Text Inputs*/
-
-input[type=text3],
-select {
+input[type=text3],select{
     width: 95%;
     padding: 12px;
     margin: 8px;
@@ -409,7 +408,7 @@ select {
     border-radius: 8px;
 }
 
-input[type="text"]:disabled {
+input[type="text"]:disabled{
     width: 50%;
     padding: 12px;
     margin: 8px;
@@ -417,11 +416,18 @@ input[type="text"]:disabled {
     border-radius: 8px;
 }
 
-label1 {
+label1{
     padding-left: 100px;
 }
 
-.modal {
+label2{
+    background-color: #04628A;
+    color: black;
+    margin-top:1rem;
+    padding: 0.5rem;
+}
+
+.modal-window{
     display: none;
     /* Hidden by default */
     position: fixed;
@@ -442,8 +448,7 @@ label1 {
 
 
 /* Modal Content/Box */
-
-.content-modal {
+.content-modal{
     background-color: #fefefe;
     margin: 5% auto;
     /* 15% from the top and centered */
@@ -453,54 +458,42 @@ label1 {
     border-radius: 12px;
 }
 
-img {
+img{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 20%;
 }
 
-.counterColumn {
+.counterColumn{
     float: right;
     width: 20%;
 }
 
-.counterRow {
+.counterRow{
     margin-left: 15%;
     width: 85%;
 }
 
-
 /* Modal Header */
-
-.modal-header {
+.modal-header{
     color: #fafafa;
     background-color: #04628A;
 }
 
 
 /* Modal Footer */
-
-.modal-footer {
+.modal-footer{
     border: none;
 }
 
-
+.modal-section{
+    margin-bottom: 30px;
+}
 /*Text Inputs*/
-
-input[type=text3],
-select {
+input[type=text3],select{
     width: 95%;
     padding: 12px;
-    margin: 8px;
-    display: inline-block;
-    border: 2px solid #ccc;
-    border-radius: 8px;
-}
-
-input[type=text4] {
-    width: 20%;
-    padding: 7px;
     margin: 8px;
     display: inline-block;
     border: 2px solid #ccc;
@@ -517,43 +510,11 @@ input[type=text4] {
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
 }
-
-.listPatientColumn{
-    float: left;
-    border: solid gray 1px;
-    border-radius: 5px;
-    width: 25%;
-    margin-right: 2%;
-}
-
-.listPatientRow{
-    width: 100%;
-}
-
-.listPatientBox{
-    display: block;
-    background: #f6f6f6;
-    padding: 40px 20px 37px;
-    text-align: center
-}
-
-.row1{
-
-}
-
-.row2{
-    height:80%
-}
-
-.tableDep{
-    width: auto!important;
-}
-
-.modal {
+.modal-window{
     display: none;
     /* Hidden by default */
     position: fixed;
@@ -572,9 +533,34 @@ input[type=text4] {
     /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4);
     /* Black w/ opacity */
-}
 
-.AddHealthD-option ul {
-    columns: 2;
+}
+.AddHealthD-option ul{
+    columns:2;
     list-style-type: none;
 }
+
+.browseButton{
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+}
+
+.browseButton input[type=file],#iconBrowse input[type=file]{
+    position:absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+}
+
+.button{
+    border: 1.5px;
+    padding: 5px;
+    background-color: #47748b;
+    border-radius: 5px;
+}
+
+#iconBrowse{
+    background-color: #fafafa;
+}
+
