--- a/css/style.css
+++ b/css/style.css
@@ -270,13 +270,6 @@ input[type=text] {
     padding: 2%;
 }
 
-#upload-content{
-    border: 1.5px solid lightgray;
-    border-radius: 5px;
-    margin: 15px 25px 0px 35px;
-    padding: 25px 25px 0px 25px;
-}
-
 /* The Close Button */
 .close {
     color: #aaa;
@@ -295,7 +288,7 @@ input[type=text] {
 #cancelBtn,
 #addBtn {
     float: right;
-    margin-right: 1rem;
+    margin-right: 1 rem;
 }
 
 .vaccineDescription {
@@ -408,6 +401,20 @@ input[type=text3],select{
     border-radius: 8px;
 }
 
+#uploadListPatient{
+    border: 2px solid lightgray;
+    border-radius: 8px;
+    height: 100px;
+    position: relative;
+}
+
+#uploadListPatient a{
+    position: absolute;
+    bottom:0;
+    right:0;
+    margin: 2px;
+}
+
 input[type="text"]:disabled{
     width: 50%;
     padding: 12px;
@@ -420,14 +427,7 @@ label1{
     padding-left: 100px;
 }
 
-label2{
-    background-color: #04628A;
-    color: black;
-    margin-top:1rem;
-    padding: 0.5rem;
-}
-
-.modal-window{
+.modal{
     display: none;
     /* Hidden by default */
     position: fixed;
@@ -482,13 +482,10 @@ img{
 }
 
 
+
 /* Modal Footer */
 .modal-footer{
     border: none;
-}
-
-.modal-section{
-    margin-bottom: 30px;
 }
 /*Text Inputs*/
 input[type=text3],select{
@@ -500,6 +497,14 @@ input[type=text3],select{
     border-radius: 8px;
 }
 
+input[type=text4]{
+    width: 20%;
+    padding: 7px;
+    margin: 8px;
+    display: inline-block;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+}
 .dropdown {
     position: relative;
     display: inline-block;
@@ -514,7 +519,8 @@ input[type=text3],select{
     padding: 12px 16px;
     z-index: 1;
 }
-.modal-window{
+
+.modal-window {
     display: none;
     /* Hidden by default */
     position: fixed;
@@ -533,34 +539,24 @@ input[type=text3],select{
     /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4);
     /* Black w/ opacity */
-
 }
+
+
 .AddHealthD-option ul{
     columns:2;
     list-style-type: none;
 }
 
-.browseButton{
+#uploadListPatient{
+    border: 2px solid lightgray;
+    border-radius: 8px;
+    height: 100px;
     position: relative;
-    overflow: hidden;
-    display: inline-block;
 }
 
-.browseButton input[type=file],#iconBrowse input[type=file]{
-    position:absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
+#uploadListPatient a{
+    position: absolute;
+    bottom:0;
+    right:0;
+    margin: 2px;
 }
-
-.button{
-    border: 1.5px;
-    padding: 5px;
-    background-color: #47748b;
-    border-radius: 5px;
-}
-
-#iconBrowse{
-    background-color: #fafafa;
-}
-
