--- a/css/patientLoginStyle.css
+++ b/css/patientLoginStyle.css
@@ -188,3 +188,98 @@ body {
     padding-bottom: 2%;
     padding-top: 2%;
 }
+
+.instructionText {
+    margin-top: 3%;
+    font-size: 105%;
+    text-align: center;
+}
+
+
+    @media only screen and (min-width: 320px) and (max-width: 420px) {
+
+        #login-form {
+            width: 68%;
+            margin-top: 8%;
+        }
+
+        .instructionText {
+            margin-top: 3%;
+            font-size: 105%;
+            text-align: center;
+        }
+
+        .logInToText {
+            margin-top: 20%;
+            font-size: 20px;
+        }
+
+        .continueBtn {
+            width: 52%;
+            font-size: 18px;
+        }
+
+        #pin {
+            border-radius: 12px;
+            margin-bottom:5% ;
+        }
+
+        .readTC {
+            font-size: 15px;
+            padding-left: 0;
+        }
+
+        .termsRadio {
+            display: flex;
+            margin-left: 3%;
+            margin-top:2%;
+            margin-right: 0;
+        }
+
+        .terms {
+            display: flex;
+        }
+    }
+
+    @media only screen and (min-width: 481px) and (max-width: 768px) {
+       
+        #login-form {
+            width: 61%;
+            margin-top: 7%;
+        }
+
+        .instructionText {
+            margin-top: 3%;
+            font-size: 105%;
+            text-align: center;
+        }
+
+        .continueBtn {
+            width: 50%;
+            font-size: 18px;
+            margin-top: 5%;
+        }
+
+    }
+
+    @media only screen and (min-width: 769px) and (max-width: 1024px) {
+
+        #login-form{
+            width: 51%;
+        }
+
+        #pin {
+            border-radius: 12px;
+        }
+
+        .instructionText {
+            margin-top: 3%;
+            font-size: 105%;
+            text-align: center;
+        }
+
+        .logInToText {
+            margin-top: 10%;
+        }
+
+    }
