--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,8 @@ a:focus {
 
 #sidebar ul li a {
     color: #fff !important;
+    background: #04628A;
+    ;
 }
 
 #sidebar ul li.active>a,
@@ -270,6 +272,9 @@ input[type=text] {
 }
 
 /* The Close Button */
+
+
+/* The Close Button */
 .close {
     color: #aaa;
     float: right;
@@ -313,6 +318,8 @@ input[type=text] {
     column-count: 4;
     column-gap: 2rem;
 }
+
+
 /* ---------------------------------------------------
     MANAGE REPORT
 ----------------------------------------------------- */
@@ -384,11 +391,13 @@ input[type=text1] {
     width: 80%!important;
 }
 
+
 /* Modal Header */
 .modal-header{
     color: #fafafa;
     background-color: #04628A;
 }
+
 
 /*Text Inputs*/
 input[type=text3],select{
@@ -473,13 +482,15 @@ img{
     width: 20%;
 }
 
-.counterRow{
+.counterRow {
     margin-left: 15%;
     width: 85%;
 }
 
+
 /* Modal Header */
-.modal-header{
+
+.modal-header {
     color: #fafafa;
     background-color: #04628A;
 }
@@ -490,6 +501,8 @@ img{
 .modal-footer{
     border: none;
 }
+
+
 /*Text Inputs*/
 input[type=text3],select{
     width: 95%;
@@ -508,6 +521,7 @@ input[type=text4]{
     border: 2px solid #ccc;
     border-radius: 8px;
 }
+
 .dropdown {
     position: relative;
     display: inline-block;
@@ -569,6 +583,7 @@ input[type=text4]{
     border: solid gray 2px;
     border-radius: 5px;
     width: 25%;
+    height: auto;
     margin-right: 2%;
 }
 
@@ -592,6 +607,42 @@ input[type=text4]{
 }
 
 .tableDep{
-    width: auto!important;
+    width: 73%!important;
+}
+
+
+
+.addPatient{
+    width: 100%;
+    height: 50%;
+    border: solid black 1px;
+    border-radius: 5px;
+}
+
+.position{
+    width: 95%;
+    position: absolute;
+    bottom: 5%;
+    left: 41%;
+
+}
+
+.link{
+    background: none!important;
+    border: none;
+    padding: 0!important;
+    color: #069;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.location{
+    margin-left: 1%;
+    width: 73%;
+    border-radius: 12px;
+}
+
+.label{
+    margin-left: 2%;
 }
 
