--- a/css/personnelStyle.css
+++ b/css/personnelStyle.css
@@ -92,7 +92,7 @@ a:focus {
 
 #sidebar ul li a:hover {
     color: #fff !important;
-    background: hsl(231, 20%, 52%);
+    background: #52526d!important;
 }
 
 #sidebar ul li a:visited {
@@ -103,6 +103,7 @@ a:focus {
 
 #sidebar a {
     color: #fff;
+    background:rgb(79, 85, 170)!important ;
 }
 
 #sidebar ul li.active>a,
@@ -162,7 +163,7 @@ a.article:hover {
     margin-top: 8px;
     margin-right: 5px;
     background: whitesmoke;
-    font-size: 17px;
+    font-size: auto;
     border: none;
     cursor: pointer;
     width: 5%;
@@ -178,7 +179,7 @@ input[type=text] {
     font-size: 17px;
     border: whitesmoke;
     background: whitesmoke;
-    width: 60%;
+    width: 73%;
     height: auto;
 }
 
@@ -187,7 +188,7 @@ input[type=text] {
     float: right;
     background: ghostwhite;
     border: 2px solid black;
-    width: 15%;
+    width: auto;
     height: 40px;
     color: black!important;
     margin-right: 10px;
@@ -238,6 +239,15 @@ input[type=text] {
 /* ---------------------------------------------------
     REPORT Counters
 ----------------------------------------------------- */
+.counterColumn{
+    float: right;
+    width: 20%;
+}
+
+.counterRow {
+    margin-left: 15%;
+    width: 85%;
+}
 
 .CounterReportContainer {
     margin-top: 10%;
@@ -284,4 +294,20 @@ input[type=text] {
 
 .tableReport {
     width: 80%!important;
+}
+
+.viewReportBtn {
+    border-radius: 12px;
+    background: #e7f4ff;
+    color: black!important;
+    padding-top:2%;
+    padding-bottom:2%;
+}
+
+#sortReports, #filterReports {
+    width:15%;
+    height:auto;
+    margin-top:1%;
+    margin-bottom:1%;
+    right:-48%;
 }
