add deployment button updated

--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,6 @@ input[type=text4]{
     position: absolute;
     bottom: 5%;
     left: 41%;
-
 }
 
 .link{
@@ -645,6 +644,22 @@ input[type=text4]{
     border-radius: 12px;
 }
 
+.datePos{
+    margin-top: 5%;
+}
+
+.batchForm{
+    padding-top: 4.5%;
+}
+
+.sortPosition{
+    margin-left: 2%;
+}
+
+.sortWidth{
+    width: 15%;
+    height: 10%;
+}
 .label{
     margin-left: 2%;
 }
