--- a/css/style.css
+++ b/css/style.css
@@ -658,8 +658,21 @@ input[type=text4]{
 
 .sortWidth{
     width: 15%;
-    height: 8%;
+    height: 10%;
 }
+
+.contactWidth{
+    width: 67%!important;
+}
+
+.districtWidth{
+    width: 75%!important;
+}
+
+.checkboxes{
+
+}
+
 .label{
     margin-left: 2%;
 }
