--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,11 @@ input[type=text] {
     width: 30% !important;
 }
 
+#depPrev{
+    position: relative;
+    margin-right: 59%;
+}
+
 /* Modal Content/Box */
 
 .content-modal{
@@ -285,6 +290,10 @@ input[type=text] {
     font-weight: bold;
 }
 
+#genNames{
+    margin-right: 10%;
+    margin-bottom: 3%;
+}
 .close:hover,
 .close:focus {
     color: black;
@@ -626,7 +635,7 @@ input[type=text4]{
     width: 95%;
     position: absolute;
     bottom: 5%;
-    left: 41%;
+    left: 40%;
 }
 
 .link{
@@ -645,14 +654,11 @@ input[type=text4]{
 }
 
 .datePos{
-    margin-top: 0.1%;
+    margin-top: 5%;
 }
 
-.dateForm{
-    height: 26%;
-    width: 95%;
-    border: 2px solid #ccc;
-    border-radius: 8px;
+.batchForm{
+    padding-top: 4.5%;
 }
 
 .sortPosition{
@@ -660,12 +666,16 @@ input[type=text4]{
 }
 
 .sortWidth{
-    width: 15%;
-    height: 8%;
+    width: auto;
+    height: auto;
+}
+
+.sortPortion{
+    margin-top: 2%;
 }
 
 .contactWidth{
-    width: 67%!important;
+    width: 75%!important;
 }
 
 .districtWidth{
@@ -678,13 +688,4 @@ input[type=text4]{
 
 .label{
     margin-left: 2%;
-}
-
-.intendedVax {
-    text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-size:17px;
-    width:100%;
 }
