--- a/css/style.css
+++ b/css/style.css
@@ -649,7 +649,10 @@ input[type=text4]{
     color: #069;
     text-decoration: underline;
     cursor: pointer;
+    margin-bottom: 3%;
 }
+
+
 
 .location{
     margin-left: 1%;
@@ -679,16 +682,20 @@ input[type=text4]{
 }
 
 .sortWidth{
-    width: 15%;
-    height: 8%;
+    width: auto;
+    height: auto;
 }
 
 .contactWidth{
-    width: 67%!important;
+    width: 75%!important;
 }
 
 .districtWidth{
     width: 75%!important;
+}
+
+#HealthDModalSort{
+    margin: 2%;
 }
 
 .checkboxes{
