--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
     font-family: 'Poppins', sans-serif;
-    background: #fafafa;
 }
 
 p {
@@ -12,8 +11,17 @@ p {
     color: #999;
 }
 
-#mainmenu {
-    margin-top: -13%;
+#headingNav1, #headingNav2 {
+    text-align: center;
+}
+
+#headingNav2 {
+    font-size: 12px;
+}
+
+.sidebar-brand-icon{
+    padding-bottom: 0%;
+    margin-bottom: -12%;
 }
 
 a,
@@ -22,6 +30,7 @@ a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
+    border-radius: 12px;
 }
 
 .navbar {
@@ -55,6 +64,7 @@ a:focus {
     display: flex;
     width: 100%;
     align-items: stretch;
+    background-color: #f5f4e5;
 }
 
 #sidebar {
@@ -237,6 +247,7 @@ input[type=text]{
     font-size: 17px;
     border: whitesmoke;
     background: whitesmoke;
+    width: 94%;
     height: auto;
 }
 
@@ -431,6 +442,7 @@ input[type=date]{
     padding: 10px;
     display: inline-block;
     border-radius: 8px;
+   
 }
 
 .input{
@@ -633,10 +645,6 @@ input[type=text]:disabled{
     text-align: center
 }
 
-.row1{
-
-}
-
 .row2{
     height:80%
 }
@@ -645,8 +653,10 @@ input[type=text]:disabled{
     width: 73%!important;
 }
 
-
-
+.tableBrgy {
+    background-color: white;
+    border-radius: 12px;
+}
 .addPatient{
     width: 100%;
     height: 50%;
@@ -715,10 +725,6 @@ input[type=text]:disabled{
 
 #HealthDModalSort{
     margin: 2%;
-}
-
-.checkboxes{
-
 }
 
 .label{
