--- a/css/ssdStyle.css
+++ b/css/ssdStyle.css
@@ -2,6 +2,43 @@
     display: flex;
     width: 100%;
     align-items: stretch;
+    background-color: #f5f4e5;
+}
+
+.sidebar-brand-icon{
+    padding-bottom: 0%;
+    margin-bottom: -12%;
+}
+
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+    border-radius: 12px;
+}
+
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
 }
 
 #sidebar {
@@ -46,12 +83,54 @@
 #sidebar ul li a {
     color: #fff !important;
     background: #04628A;
+;
 }
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
     background: #06425b;
+}
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #04628A;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.download {
+    background: #fff;
+    color: #04628A;
+}
+
+a.article,
+a.article:hover {
+    background: #04628a !important;
+    color: #fff !important;
 }
 
 #content {
