--- a/css/ssdStyle.css
+++ b/css/ssdStyle.css
@@ -207,7 +207,7 @@ select{
     margin: 5% auto;
     /* 15% from the top and centered */
     border: 1px solid #888;
-    width: 50%;
+    width: 55%;
     /*Could be more or less, depending on screen size */
 }
 
@@ -244,6 +244,11 @@ select{
     background-color: #04628A;
 }
 
+/* Modal Footer */
+.modal-footer{
+    border: none!important;
+}
+
 #success{
     display: block;
     margin-left: auto;
@@ -264,7 +269,16 @@ select{
     margin-left: -250px;
 }
 
-#totalPopulation, #vaccineDeployments, #totalPopulationPerHD, #selectDeployment,#deploymentSummary, #healthDistrictContainer, #deploymentQueue{
+#selectDeployment{
+    padding-top: 2%;
+    width: 40%;
+    border-radius: 12px;
+    display: inline-block;
+    margin-left: 7%;
+    height: 20%;
+}
+
+#totalPopulation, #vaccineDeployments, #totalPopulationPerHD,#deploymentSummary, #healthDistrictContainer, #deploymentQueue{
     padding-top: 2%;
     background-color: white;
     width: 40%;
@@ -281,5 +295,11 @@ select{
     padding-top: 3%;
     margin-left: 5%;
 }
+
+.tableBrgy {
+    background-color: white;
+    border-radius: 12px;
+}
+
 
 
