--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+.priorityGroups {
+    color:#043D55 !important;
+}
+
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
