--- a/css/ssdStyle.css
+++ b/css/ssdStyle.css
@@ -185,8 +185,8 @@ select{
     height: auto;
 }
 
-#sendStubs{
-    margin: 0% 5% 5% 67%;
+#allocateButton{
+    margin-left: 38%;
 }
 
 #buttonGroup{
@@ -197,8 +197,6 @@ select{
 .deploymentSummaryContents,.deploymentQueueContents, .labels{
     margin-left: 4%;
 }
-
-
 
 /* Modal Content/Box */
 .content-modal{
