--- a/css/ssdStyle.css
+++ b/css/ssdStyle.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     align-items: stretch;
-    background-color: #f5f4e5;
+    background-color: #ffffff;
 }
 
 .sidebar-brand-icon{
@@ -176,9 +176,8 @@ select{
     border-color: #043D55;
 }
 
-.healthDistrictContainer{
-    margin-top: 6%;
-    padding: 5%;
+#healthDistrictContainer{
+    margin-top: 4%;
     border-radius: 5px;
     border: 1px solid black;
     width: auto;
@@ -197,6 +196,7 @@ select{
 .deploymentSummaryContents,.deploymentQueueContents, .labels{
     margin-left: 4%;
 }
+
 
 /* Modal Content/Box */
 .content-modal{
@@ -268,8 +268,7 @@ select{
 }
 
 #selectDeployment{
-    padding-top: 2%;
-    width: 100%;
+    width: 60%;
     border-radius: 12px;
     display: inline-block;
     margin-left: 7%;
@@ -286,7 +285,7 @@ select{
 }
 
 #deploymentSummary, #deploymentQueue{
-    padding-top: 2%;
+    padding: 2%;
     background-color: white;
     width: 100%;
     border-radius: 12px;
@@ -297,16 +296,17 @@ select{
 
 #vaccineDeployments{
     padding-top: 2%;
-    background-color: white;
     width: 95%;
     border-radius: 12px;
     display: inline-block;
     margin-right: 7%;
+    padding: 2%;
+    background-color: #f6f6f6;
 }
 
 #totalPopulation,#totalPopulationPerHD{
-    padding-top: 2%;
-    background-color: white;
+    padding: 2%;
+    background-color: #f6f6f6;
     width: 100%;
     border-radius: 12px;
     display: inline-block;
@@ -314,19 +314,29 @@ select{
     margin-right: 7%;
 }
 
+#totalPopulation{
+    margin-bottom: 2%;
+}
+
 #vaccineDeploymentContent{
     margin: 5%;
 }
 
-.healthDistrict{
-    padding-top: 5%;
-    margin-left: 5%;
-}
 
 .tableBrgy {
     background-color: white;
     border-radius: 12px;
 }
+
+#deploymentSummary{
+    margin-top: 8%;
+    background-color: #f6f6f6;
+}
+
+
+
+
+
 
 
 
